# Prohibited-Items-Detection_Web

description/: 新建 文本文档.txt
xRayDetection/: .gitignore  .gitmodules  CMakeLists.txt  Config.ini  README.md
xRayDetection/Test/Detector/: CMakeLists.txt  DefaultModel.cpp  DefaultModel.h  IDetector.h  IModel.h  ISession.h  OrtUtils.cpp  OrtUtils.h  YoloSession.cpp  YoloSession.h  main.cpp
xRayDetection/Test/HttpServer/: CMakeLists.txt  CivetServer.h  main.cpp
xRayDetection/Test/JsonParse/: CMakeLists.txt  JsonHelper.cpp  JsonHelper.h  main.cpp
xRayDetection/Test/TcpCommu/: CMakeLists.txt  Client.cpp  NICM.cpp  NICM.h  PortScanner.cpp  PortScanner.h  Server.cpp  SocketClient.cpp  SocketClient.h  SocketConf.h  SocketServer.cpp  SocketServer.h  TcpMessage.h  main.cpp
xRayDetection/Test/TcpServer/: CMakeLists.txt  index.html  main.cpp  server.cpp  server.h
xRayDetection/Test/UI/: CMakeLists.txt
xRayDetection/Test/UI/src/: UITest.cpp  UITest.h  main.cpp
xRayDetection/Test/filesystem/: main  main.cpp
xRayDetection/UI_SRC/: index.html
xRayDetection/UI_SRC/css/: style.css  style_54.css
xRayDetection/UI_SRC/js/: index.js  url.js
xRayDetection/include/: App.h  MainContext.h  Utils.h
xRayDetection/include/Common/: Event.h  Event.inl  FileWatcher.h  Filesystem.h  IQueue.h  Jsonw.h  Logger.hpp  UMapper.h
xRayDetection/include/Communications/: AssetHandler.h  DetectResultQueue.hpp  Handler.h  HttpServer.h  SieHandler.h  Structure.hpp  UiHandler.h  UiUtils.h
xRayDetection/include/Detection/: ISession.h  Mics.h  Model.h  YoloDefine.h
xRayDetection/include/Detection/yolov5/: ModelParser.h  ModelProcessor.h  Yolov5Session.h
xRayDetection/include/Resources/: ImageManager.h  ModelManager.h  PathContainer.h  ResourceManager.h
xRayDetection/scripts/: DataAnalyzer.py  main  xRayCountOutput.txt  xRayData.csv
xRayDetection/scripts/CPP/: Statistics.cpp  Statistics.h  main.cpp
xRayDetection/src/: App.cpp  MainContext.cpp  main.cpp
xRayDetection/src/Common/: FileWatcher.cpp  Filesystem.cpp  Jsonw.cpp
xRayDetection/src/Common/INI/: INIReader.cpp  ini.c
xRayDetection/src/Communications/: AssetHandler.cpp  Handler.cpp  HttpServer.cpp  SieHandler.cpp  UiHandler.cpp  UiUtils.cpp
xRayDetection/src/Detection/yolov5/: ModelParser.cpp  ModelProcessor.cpp  Yolov5Session.cpp
xRayDetection/src/Resources/: ImageManager.cpp  ModelManager.cpp  PathContainer.cpp  ResourceManager.cpp
xRayDetection/src/Share/: FileWatcher.cpp
